Fixed itemWrapper z-index in Select components

--- a/src/styles/components/inputs/Select.module.scss
+++ b/src/styles/components/inputs/Select.module.scss
@@ -75,6 +75,7 @@
             min-width: 200px;
             transition: all 0.4s ease-out;
             overflow-x: hidden;
+            z-index: 1000;
             &::-webkit-scrollbar{
                 display: none;
             }
